<resources>
    <string name="app_name">Patient</string>
    <string name="emailaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="donthaveaccount">Don\'t have an account ?</string>
    <string name="iforgotmypassword">I forgot my password</string>
    <string name="orsigningusing">or signin using</string>
    <string name="facebook">Facebook</string>
    <string name="createaccount">Create Account</string>
    <string name="google">Google</string>
    <string name="telluswhoareu">Tell us who you are!</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="alreadyaccount">Already have an account ?</string>
    <string name="signin">Signin</string>
    <string name="iagreetoinstadoctor">"I agree to Insta Doctor's "</string>
    <string name="termsofuse">Terms of use</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="privacy">Privacy Policy</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="resetyourpswordtxt">Please enter your email address and we will send you a link to reset your password</string>
    <string name="recovermypassword">Recover my password</string>
    <string name="introone">Meet Doctors\n from hospitals near you</string>
    <string name="introtwo">Medicine delivery \n from nearest Pharmacy</string>
    <string name="introthree">See what others \n say about your doctor</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onlinedoctor">Online Doctors</string>
    <string name="offlinedoctors">Offline Doctors</string>
    <string name="seeadoctor">See a Doctor</string>
    <string name="venereology"><![CDATA[Venereology & Leprosy]]></string>
    <string name="patient">Patients</string>
    <string name="rating">Rating</string>
    <string name="experience">Experience</string>
    <string name="avilabletoday">Availability</string>
    <string name="checkupfees">Checkup Fees</string>
    <string name="biography">Biography</string>
    <string name="vieweditprofile">View and edit profile</string>
    <string name="payment">Payment</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="profile">Profile</string>
    <string name="contactinformation">Contact Information</string>
    <string name="changepassword">Change Password</string>
    <string name="insurance">Insurance</string>
    <string name="employer">Employer</string>
    <string name="getintouch">Get In Touch</string>
    <string name="customersupport">Customer Support</string>
    <string name="aboutinstadoctor">About Insta Doctor</string>
    <string name="termcondition">Terms and Conditions</string>
    <string name="informedconsent">Informed Consent</string>
    <string name="termconditionsymbol"><![CDATA[Terms & Conditions]]></string>
    <string name="healthinformation">Use of Health Information Agreement</string>
    <string name="memberofeducationprogram">Member Education Program Agreement</string>
    <string name="appprivacypolicy">App Privacy Policy</string>
    <string name="freevisitpromotion">Free Visit Promotion</string>
    <string name="gethelpquickly">Get help Quickly</string>
    <string name="browseourfaqs">Browse our FAQs</string>
    <string name="livechartsupport">Live chat support</string>
    <string name="sendamessage">Send us an email</string>
    <string name="callsupporttwofourseven">Call support 24/7</string>
    <string name="passwordinformation">Password Information</string>
    <string name="eightcharacterminimum">8 Characters Minimum</string>
    <string name="onenumber">One number</string>
    <string name="savechanges">Save Changes</string>
    <string name="edityouraddress">Edit your address</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm new Password</string>
    <string name="cancel">Cancel</string>
    <string name="phoneno">Phone no</string>
    <string name="email">Email</string>
    <string name="savecontactinformation">Save Contact Information</string>
    <string name="takephoto">Take photo</string>
    <string name="updateyouremail">Update your email</string>
    <string name="pleaseverifyyourpassword">Please verify your password</string>
    <string name="upprofilepasswordtxt">In order to update your email, please verify your password</string>
    <string name="updateaddress">Update your address</string>
    <string name="address">Address</string>
    <string name="addresstwo">Address 2</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="state">State</string>
    <string name="verifypassword">Verify password</string>
    <string name="termofuse">Terms of use</string>
    <string name="instadoctor">Insta Doctor Terms of use</string>
    <string name="dummy"><u>Use of the site</u></string>
    <string name="dummyone"><u>Health Services</u></string>
    <string name="faqs">FAQs</string>
    <string name="whovisitfor">Who is this visit for?</string>
    <string name="mychild">My Child</string>
    <string name="mustbeundereighteen">Must be under 18</string>
    <string name="someoneelse">Someone else?</string>
    <string name="ifthepatienteightenn">If the patient is over 18, they need to create \ntheir own account</string>
    <string name="name">Name</string>
    <string name="regisetyourchild">Register your child</string>
    <string name="selectage">Select age</string>
    <string name="addyourchild">Add your child</string>
    <string name="howlongfeltthisway">How long have you felt \nthis way?</string>
    <string name="days">Days</string>
    <string name="takingmedicinetxt">Are your currently taking \nany medicine</string>
    <string name="considermedicine">Please consider all the medicines you are taking</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="savemedication">Save medication</string>
    <string name="doyouhaveanydrugallergy">Do you have any \ndrug allergy?</string>
    <string name="pleaseconsidermedicine">Please consider all the medicines you are taking</string>
    <string name="example">Examples</string>
    <string name="mediname">Amoxicillin \nBactrim \nAspirin</string>
    <string name="nointernet" translatable="false">No internet Connection</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="wouldlikeseedocotor">When would you like to \nsee the doctor</string>
    <string name="seedoctornow">See Doctors Now</string>
    <string name="chooseonlinedoctor">Choose doctor from \nonline doctors</string>
    <string name="sceduleappointment">"Schedule appointment "</string>
    <string name="selectdatetime"><![CDATA[Select Date & Time]]></string>
    <string name="time">Time</string>
    <string name="schedule">Schedule</string>
    <string name="thankuscreentxt">You may now close your app. We will send \nyou a notification once</string>
    <string name="addpaymentdetail">Add Payment Details</string>
    <string name="entercreditcardnumber">Enter Credit Card Number</string>
    <string name="cardexpiration">Card Expiration</string>
    <string name="cvv">CVV</string>
    <string name="addcreditcard">Add Credit Card</string>
    <string name="selectyoursymptoms">Select your symptoms</string>
    <string name="whichmedication">Which medication?</string>
    <string name="addanother">Add another</string>
    <string name="whichdrugallergie">Which drug allergies ?</string>
    <string name="startnow">Start Now</string>
    <string name="keepfee">Fees</string>
    <string name="meetnow">Meet Now</string>
    <string name="book">Book</string>
    <string name="paymentsummery">Payment Summery</string>
    <string name="constitutionfee">Consultation fee</string>
    <string name="total">Total:</string>
    <string name="selectpayment">Select Payment Method</string>
    <string name="byplacingcreditcard">By placing this order, you agree to credit card</string>
    <string name="termandcondition"><![CDATA[Terms & Conditions]]></string>
    <string name="addpaymentcard">Add a new Payment Card</string>
    <string name="servicefee">Service fee.</string>
    <string name="thankyou">Thank you</string>
    <string name="yourpaymentcompleted">Your payment has been completed\nyour appointment has been scheduled</string>
    <string name="joinsession">Join Session</string>
    <string name="addcomment">Add comments</string>
    <string name="sumbit">Submit</string>
    <string name="prescription">Prescription</string>
    <string name="deliverymedicinetome">Deliver this medicine</string>
    <string name="deliverreq">Delivery request</string>
    <string name="selectamenties">Select emirate:</string>
    <string name="notedriver">Note: Our driver will call you to update you on the final cost of your medicine once he reaches the pharmacy in the next one hour.</string>
    <string name="request">Request</string>
    <string name="requestedsubmit">Request Submitted</string>
    <string name="ourdriverercontact">Our driver will contact you shortly to \nupdate you on the medicine cost.</string>
    <string name="reviewapp">Review App</string>
    <string name="share">Share</string>
    <string name="mobileno">Mobile number:</string>
    <string name="fulladdress">Full address:</string>
    <string name="medicalhistory">Medical History</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="sessions">Sessions</string>
    <string name="chathistory">Chat history</string>
    <string name="years">Years</string>
    <string name="month">Months</string>
    <string name="range">Range: 01-18</string>
    <string name="whatweightheight"><![CDATA[What is your weight \n& height?]]></string>
    <string name="addnewchild">Add New Child</string>
    <string name="dosage">Dosage:</string>
    <string name="type">Type:</string>
    <string name="courseperiod">Course Period:</string>
    <string name="servingperday">Serving Per Day</string>
    <string name="comments">Comments:</string>
    <string name="invite_acitivity_name">Meeting Invite Example</string>
    <string name="zm_rc_using_fingers_for_remote_control">Remotely control a desktop using gestures</string>
    <string name="zm_rc_one_finger_tap">Tap with one finger</string>
    <string name="zm_rc_one_finger_tap_description">Tap the screen with one finger to click the mouse</string>
    <string name="zm_rc_one_finger_double_taps">Double tap with one finger</string>
    <string name="zm_rc_one_finger_double_taps_description">Double tap with one finger to double click the mouse</string>
    <string name="zm_rc_one_long_tap">Long press with one finger</string>
    <string name="zm_rc_one_long_tap_description">Press the screen with one finger to right-click the mouse</string>
    <string name="zm_rc_two_fingers_scroll">Swipe with two fingers</string>
    <string name="zm_rc_two_fingers_scroll_description">Swipe with two fingers to scroll up and down</string>
    <string name="zm_rc_two_fingers_pinch">Pinch with two fingers</string>
    <string name="zm_rc_two_fingers_pinch_description">Pinch in and out with two fingers to zoom in and out</string>
    <string name="zm_rc_mouse_icon">Mouse icon</string>
    <string name="zm_rc_mouse_icon_description">Drag the mouse icon to move the remote mouse pointer</string>
    <string name="zm_rc_tap_notice">Tap here to control %s\'s screen remotely</string>
    <string name="alert_other_is_sharing">You cannot start screen share while the other participant is sharing.</string>
    <string name="settings_custom_ui">Customized UI</string>
    <string name="settings_switch_domain">Switch domain</string>
</resources>