<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
            <variable
                name="viewModel"
                type="com.softgates.instadoctor.createaccount.CreateAccountViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/thirty"
    android:paddingEnd="@dimen/thirty"
    android:paddingBottom="@dimen/twoenty"
    android:background="@android:color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tellushowtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telluswhoareu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_twoenty"
        android:layout_marginTop="70dp"
        />

    <LinearLayout
        android:id="@+id/gendertypelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tellushowtxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/fourty"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/malebtn"
            android:layout_width="140dp"
            android:layout_height="155dp"
            android:layout_marginEnd="@dimen/ten"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/fifteen">

            <ImageView
                android:layout_width="@dimen/malefemaleimg"
                android:layout_height="75dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/twoenty"
                android:src="@drawable/male_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/maletxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/five"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_etn"
                android:fontFamily="@font/poppin_reg"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/female"
            android:layout_width="140dp"
            android:layout_height="155dp"
            android:layout_marginStart="@dimen/fifteen"
            app:cardBackgroundColor="@color/gray"
            app:cardCornerRadius="@dimen/fifteen">


            <ImageView
                android:layout_width="@dimen/malefemaleimg"
                android:layout_height="@dimen/malefemaleimg"
                android:src="@drawable/female_icon"
                android:layout_gravity="center|top"
                android:layout_marginTop="@dimen/twoenty"                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/femaletxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/ten"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_etn"
                android:fontFamily="@font/poppin_reg"
                android:textStyle="bold"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

<!--
    android:theme="@style/TextLabel"

            android:theme="@style/TextLabel"

-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameedittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gendertypelayout"
        android:layout_marginTop="@dimen/twoenty"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_sixteen"
        app:errorEnabled="true"
        android:maxHeight="50dp"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        app:hintTextAppearance="@style/HintInputTextAppearance"
        android:layout_marginStart="@dimen/fifteen"
        android:layout_marginEnd="@dimen/fifteen"
        android:hint="@string/name"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppin_reg"
            android:textAppearance="@style/InputTextAppearance"
            android:onTextChanged="@{viewModel.onTextChangedName}"
            android:text="@{viewModel.name}"
            android:textSize="@dimen/textsize_sixteen" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailedittxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameedittxt"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_sixteen"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/HintInputTextAppearance"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        android:layout_marginStart="@dimen/fifteen"
        android:layout_marginEnd="@dimen/fifteen"
        android:hint="@string/emailaddress"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_sixteen"
            android:textAppearance="@style/InputTextAppearance"
            android:text="@{viewModel.email}"
            android:onTextChanged="@{viewModel.onTextChangedEmail}"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/dateofbirtheditxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateofbirth"
            android:clickable="false"
            android:editable="false"
            android:fontFamily="@font/poppin_reg"
            android:focusable="false"
            android:textSize="@dimen/textsize_sixteen"
            android:layout_marginTop="@dimen/ten"
            app:layout_constraintTop_toBottomOf="@+id/emailedittxt"
            android:layout_marginStart="@dimen/fifteen"
            android:layout_marginEnd="@dimen/fifteen"
            />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dateofbirtheditxt"
        android:layout_marginTop="@dimen/five"
        android:layout_marginStart="@dimen/fifteen"
        android:layout_marginEnd="@dimen/fifteen"
        android:textSize="@dimen/textsize_sixteen"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/HintInputTextAppearance"
        app:errorTextAppearance="@style/ErrorTextAppearance"
        android:fontFamily="@font/poppin_reg"
        android:hint="@string/password"
        android:textColorHint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_sixteen"
            android:textAppearance="@style/InputTextAppearance"
            android:text="@{viewModel.password}"
            android:onTextChanged="@{viewModel.onTextChangedPassword}"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/termspolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordtxt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/twoenty"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/accepttermcondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iagreetoinstadoctor"
            android:buttonTint="@color/green"
            android:paddingStart="@dimen/twoenty"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_twl"
            app:layout_constraintTop_toBottomOf="@+id/passwordtxt"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/termsofuse"
            android:textColor="@color/green"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_twl"
            app:layout_constraintTop_toBottomOf="@+id/passwordtxt"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_twl"
            android:layout_marginStart="@dimen/five"
            app:layout_constraintTop_toBottomOf="@+id/passwordtxt"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/privacypolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/green"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_twl"
        app:layout_constraintTop_toBottomOf="@+id/termspolicy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--
    android:onClick="@{()-> viewModel.register()}"
-->

    <RelativeLayout
        android:id="@+id/createaccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/privacypolicy"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/gradient_create_account"
        android:layout_marginTop="@dimen/twoenty"
        android:layout_marginStart="@dimen/twoenty"
        android:layout_marginEnd="@dimen/twoenty">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/createaccount"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_etn"
            android:textColor="@android:color/white"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/twoenty"
        android:onClick="@{() -> viewModel.register()}"

        app:layout_constraintTop_toBottomOf="@+id/createaccount">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alreadyaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadyaccount"
            android:textColor="@color/black"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_twl"            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/yellow"
            android:layout_marginStart="@dimen/five"
            android:fontFamily="@font/poppin_reg"
            android:textSize="@dimen/textsize_twl"
            />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>