<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/twoenty"
        android:paddingEnd="@dimen/twoenty"
        app:layout_constraintBottom_toBottomOf="parent"
        >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/updateemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/updateyouremail"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_etn"
        android:textStyle="bold"
        android:textColor="@android:color/white"
/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verifypasswordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
            android:text="@string/pleaseverifyyourpassword"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_fourteen"
            android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/thirty"
        app:layout_constraintTop_toBottomOf="@+id/updateemail"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailpasstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/upprofilepasswordtxt"
        app:layout_constraintTop_toBottomOf="@+id/verifypasswordtxt"
        android:fontFamily="@font/poppin_reg"
        android:textSize="@dimen/textsize_fourteen"
        android:textColor="@android:color/white"
        />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailpasstxt"
            android:fontFamily="@font/poppin_reg"
            android:theme="@style/TextLabelDialog"
            android:textSize="@dimen/textsize_fourteen"
            android:layout_marginTop="@dimen/twoenty"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin_reg"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:textSize="@dimen/textsize_fourteen"
                android:backgroundTint="@color/yellow"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:id="@+id/addressoneline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/password"
            />


    <RelativeLayout
        android:id="@+id/verifypassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_resetpassword"
        android:layout_marginTop="@dimen/fourty"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/twoenty">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verifypassword"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppin_reg"
            android:paddingEnd="@dimen/twoentyfive"
            android:paddingStart="@dimen/twoentyfive"
            android:paddingTop="@dimen/five"
            android:paddingBottom="@dimen/five"
            android:textSize="@dimen/textsize_fourteen"/>

    </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>