<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.softgates.instadoctor.setting.SettingViewModel" />
    </data>
    <!--  <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingBottom="@dimen/ten"
          android:background="@android:color/white">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homebg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/instadoctorimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/medicalhistory"
            app:fontFamily="@font/poppin_semi_bold"
            android:textSize="@dimen/textsize_twoentytwo"
            android:layout_marginTop="@dimen/fifteen"
            android:textColor="@color/black"
            />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/prescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prescriptions"
            android:fontFamily="@font/poppin_semi_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_etn"
            android:layout_marginTop="@dimen/twoenty"
            app:layout_constraintTop_toBottomOf="@+id/instadoctorimg"
            android:layout_marginStart="@dimen/twoenty"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/prescriptionrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/prescription"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="@dimen/ten"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sessiontxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sessions"
            android:fontFamily="@font/poppin_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/twoenty"
            android:textSize="@dimen/textsize_etn"
            app:layout_constraintTop_toBottomOf="@+id/prescriptionrecyclerview"
            android:layout_marginStart="@dimen/twoenty"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sessionrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sessiontxt"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/chathistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chathistory"
            android:fontFamily="@font/poppin_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/twoenty"
            android:textSize="@dimen/textsize_etn"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/sessionrecyclerview"
            android:layout_marginStart="@dimen/twoenty"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chathistoryrecyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/chathistory"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--
        </androidx.core.widget.NestedScrollView>
    -->

</layout>